# w-tools

./: .gitignore  CMakeLists.txt  Makefile  compile_flags.txt  conf.wtools
examples/: CMakeLists.txt  main.cpp
include/wtools/: config.hpp
src/: config.cpp  main.cpp
src/lib/: config.cpp
src/wtools/core/: config.cpp  config.hpp
src/wtools/system/: call.hpp  filesystem.hpp
src/wtools/system/windows/: call.cpp  filesystem.cpp
